force-app/main/default/objects/IndividualGDPRState__dlm.object
<CustomObject>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <label>Created By</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <invalidMergeActionType>Drop</invalidMergeActionType>
            <isDynamicLookup>false</isDynamicLookup>
            <refAttrDeveloperName>CreatedBy</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <invalidMergeActionType>Drop</invalidMergeActionType>
            <isDynamicLookup>false</isDynamicLookup>
            <refAttrDeveloperName>CreatedDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <invalidMergeActionType>Drop</invalidMergeActionType>
            <isDynamicLookup>false</isDynamicLookup>
            <refAttrDeveloperName>DataSourceObject</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <invalidMergeActionType>Drop</invalidMergeActionType>
            <isDynamicLookup>false</isDynamicLookup>
            <refAttrDeveloperName>DataSource</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOptedOutProcessing__c</fullName>
        <label>Do Not Process</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <invalidMergeActionType>Drop</invalidMergeActionType>
            <isDynamicLookup>false</isDynamicLookup>
            <refAttrDeveloperName>HasOptedOutProcessing</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <invalidMergeActionType>Drop</invalidMergeActionType>
            <isDynamicLookup>false</isDynamicLookup>
            <primaryIndexOrder>1</primaryIndexOrder>
            <refAttrDeveloperName>Id</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndividualId__c</fullName>
        <label>Individual Id</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <invalidMergeActionType>Drop</invalidMergeActionType>
            <isDynamicLookup>false</isDynamicLookup>
            <refAttrDeveloperName>IndividualId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <label>Last Modified By</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <invalidMergeActionType>Drop</invalidMergeActionType>
            <isDynamicLookup>false</isDynamicLookup>
            <refAttrDeveloperName>LastModifiedBy</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <invalidMergeActionType>Drop</invalidMergeActionType>
            <isDynamicLookup>false</isDynamicLookup>
            <refAttrDeveloperName>LastModifiedDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OptOutProcessRequestCompletionDate__c</fullName>
        <label>Opt Out Process Request Completion Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <invalidMergeActionType>Drop</invalidMergeActionType>
            <isDynamicLookup>false</isDynamicLookup>
            <refAttrDeveloperName>OptOutProcessRequestCompletionDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OptOutProcessRequestDate__c</fullName>
        <label>Opt Out Process Request Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <invalidMergeActionType>Drop</invalidMergeActionType>
            <isDynamicLookup>false</isDynamicLookup>
            <refAttrDeveloperName>OptOutProcessRequestDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SendIndividualDataRequestCompletionDate__c</fullName>
        <label>SendIndividualDataRequestCompletionDate</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <invalidMergeActionType>Drop</invalidMergeActionType>
            <isDynamicLookup>false</isDynamicLookup>
            <refAttrDeveloperName>SendIndividualDataRequestCompletionDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SendIndividualDataRequestDate__c</fullName>
        <label>Send Individual Data Request Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <invalidMergeActionType>Drop</invalidMergeActionType>
            <isDynamicLookup>false</isDynamicLookup>
            <refAttrDeveloperName>SendIndividualDataRequestDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SendIndividualData__c</fullName>
        <label>Export Individual&apos;s Data</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <invalidMergeActionType>Drop</invalidMergeActionType>
            <isDynamicLookup>false</isDynamicLookup>
            <refAttrDeveloperName>SendIndividualData</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShouldForgetRequestCompletionDate__c</fullName>
        <label>Should Forget Request Completion Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <invalidMergeActionType>Drop</invalidMergeActionType>
            <isDynamicLookup>false</isDynamicLookup>
            <refAttrDeveloperName>ShouldForgetRequestCompletionDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShouldForgetRequestDate__c</fullName>
        <label>Should Forget Request Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <invalidMergeActionType>Drop</invalidMergeActionType>
            <isDynamicLookup>false</isDynamicLookup>
            <refAttrDeveloperName>ShouldForgetRequestDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShouldForget__c</fullName>
        <label>Forget This Individual</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <invalidMergeActionType>Drop</invalidMergeActionType>
            <isDynamicLookup>false</isDynamicLookup>
            <refAttrDeveloperName>ShouldForget</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TenantId__c</fullName>
        <label>Tenant Id</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <invalidMergeActionType>Drop</invalidMergeActionType>
            <isDynamicLookup>false</isDynamicLookup>
            <refAttrDeveloperName>TenantId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>System</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
        <referenceEntityName>IndividualGDPRState</referenceEntityName>
    </mktDataModelAttributes>
</CustomObject>